# pyFMSynthesis

./: README.md  pyproject.toml
fmsynthesis/: fm_synthesis.py
