[tool.poetry]
name = "fmSynthesis"
version = "0.1.0"
description = ""
authors = ["slegrand <ut5svsxgc@relay.firefox.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
numpy = "^1.21.2"
simpleaudio = "^1.0.4"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
